Update Nav spacing and fix links

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -89,7 +89,7 @@ nav {
  }
 
 nav ul {
-    margin: 0 13%;
+    margin: 0 2%;
 }
 
 nav li {
